                        + Added anti-cache feature (Martin Braun)
			+ All files have new indents to make viewing and developing easier. Read DEVELOPERS for more info.
			+ sphourly.php changed to reflect changes in weeklystats (Martin Braun)
			+ Updated documentation.html with explanation about remotehtmlview (me)
			+ Bugfix: mail.php doesn't deactive clients anymore (sypplie)
			+ Bugfix: Authentication required for detailstats now. (me)
			+ Bugfix: forgot banner in creditstats.php. HTML-banners will show now. (me)
                        + Bugfix: several smaller bugs fixed.
 v 1.7.1 - 18/12/2000  + Bugfix: login box only appears once now
 v 1.7.0 - 17/12/2000  + Fixed a problem for Windows users with banneradd.php
                       + GIF/PNG support automatically detected (first contribution of Phil)
                       + Clients now have logout function
                       + When logging in, user is first logged out
                       + Added remote HTML banners through JavaScript
                       + Credit Statistics now sorted by letter. 1 screen per letter.
                       + Bugfix: Previous is now shown in the creditstats screen
                       + Bugfix: images without links patch applied (thanks wesku)
                       + Bugfix: fixed a problem with creditstats showing wrong number of clicks
                       + Bugfix: clients can get expire date again
                       + Bugfix: typo in admin.php
                       + Bugfix: several bugs have been fixed
 v 1.6.3 - 11/30/2000  + Bugfix: banners no longer set to inactive at wrong moments
 v 1.6.2 - 11/28/2000  + Added 'Reset Statistics' for banners
                       + Added Dutch/Flemish language file
                       + Bugfix: some minor bugs
 v 1.6.1 - 11/26/2000  + Updated all language files to include new variables (untranslated)
                       + Replaced some English expressions by variables